大题批改成功

--- a/drawingboard/css/check.css
+++ b/drawingboard/css/check.css
@@ -110,6 +110,7 @@ html,
     .view .swiper-container {
       width: 825px;
       height: 1100px;
+      top: 0;
     }
 
     .view .swiper-container img {
