修复页面展示，添加浮层

--- a/drawingboard/css/check.css
+++ b/drawingboard/css/check.css
@@ -307,3 +307,5 @@ html,
     .other_btn_wrap div {
       padding: 0.25rem 0;
     }
+
+    .top {height:100%;background-color:#fff;filter:Alpha(Opacity=60);opacity:0.6;}
