作业提交添加蒙层和提交流程优化=>等待图片上传完之后提交数据给服务器

--- a/drawingboard/css/check.css
+++ b/drawingboard/css/check.css
@@ -237,6 +237,15 @@ html,
       z-index: 9999;
     }
 
+    .mask_modal {
+      position: fixed;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 9999;
+    }
+
     .mark_error_box {
       width: 11.2rem;
       height: 7.2rem;
